# pattern_engine

./: CLAUDE.md  Cargo.toml  Makefile  README.md
src/: align.rs  cli.rs  input.rs  ir.rs  json.rs  lib.rs  main.rs  synth.rs  tokenize.rs  verify.rs
src/render/: glob.rs  mod.rs  regex.rs  wrap.rs
tests/: cases.rs
