[package]
name = "pattern_engine"
version = "0.1.0"
edition = "2024"
description = "Pattern Engine."
license = "MIT"
repository = "https://github.com/dpep/pattern_engine"

# Published as `pattern_engine`; binary ships as `pe`.
[[bin]]
name = "pe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
fancy-regex = "0.14"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
